--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 pycodestyle==2.5.0
 pylint==2.4.4
+python==3.6.9
 typed-ast==1.4.0
 Werkzeug==0.16.0
 wrapt==1.11.2
